# injectStar

./: .gitignore  README.md  injectStar_ver4.py  makeJobs.py  prepareWorkspace.py  setup.cfg  sitemap.xml
src/injectStar/: crossmatch.py  injectStar_ver4.py  makeJobs.py  outputCatalog.py  prepareWorkspace.py
src/injectStar/utils/: bash_actions.py  config_actions.py
tests/: config_default.txt  test_bash_actions.py
utils/: bash_actions.py  config_actions.py
