[metadata]
name = injectStar
version = 0.1
author = Itsuki Ogami
author_email = itsuki.ogami@grad.nao.ac.jp
description = Add short description here
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itsukiogami/injectStar
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src